<resources>
    <string name="app_name" translatable="false">BotController</string>
    <string name="action_reset">Reset server</string>
    <string name="action_exit">Exit</string>
    <string name="text_login">Login:</string>
    <string name="text_password">Password:</string>
    <string name="text_address">Address:</string>
    <string name="text_port">Port:</string>
    <string name="button_save">Save</string>
    <string name="toast_no_login">Login can not be empty!</string>
    <string name="toast_no_password">Password can not be empty!</string>
    <string name="toast_no_address">Address can not be empty!</string>
    <string name="toast_no_port">Port can not be empty!</string>
    <string name="text_status_on">Working</string>
    <string name="text_status_off">Disabled</string>
    <string name="button_enable">Enable</string>
    <string name="button_disable">Disable</string>
    <string name="text_status">"Status: "</string>
    <string name="button_enable_all">Enable all</string>
    <string name="button_disable_all">Disable all</string>
    <string name="toast_long_method">It has long duratuon. Please, wait. Do not close app</string>
    <string name="fragment_title">Server error</string>
    <string name="fragment_message">There is error while connecting. Do you want to restart app or reset server settings?</string>
    <string name="fragment_button_restart">Restart app</string>
    <string name="fragment_button_reset">Reset settings</string>
</resources>